--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ name: RELEASE
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
+permissions:
+    contents: write
+
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
