--- a/.releaserc.json
+++ b/.releaserc.json
@@ -14,30 +14,15 @@
           {"type": "revert", "release": "patch", "scope": "s3-browser"},
           {"type": "docs", "release": "patch", "scope": "s3-browser"},
           {"type": "style", "release": "patch", "scope": "s3-browser"},
-          {"type": "refactor", "release": "patch", "scope": "s3-browser"}
-        ],
-        "presetConfig": {
-            "types": [
-                {
-                    "type": "fix",
-                    "scope": "s3-browser",
-                    "hidden": false,
-                    "section": "Bug fixes"
-                },
-                {
-                    "type": "feat",
-                    "scope": "s3-browser",
-                    "hidden": false,
-                    "section": "Features"
-                },
-                {
-                    "type": "refactor",
-                    "scope": "s3-browser",
-                    "hidden": false,
-                    "section": "Code Refactoring"
-                }
-            ]
-        }
+          {"type": "refactor", "release": "patch", "scope": "s3-browser"},
+          {"type": "feat", "release": false },
+          {"type": "fix", "release": false },
+          {"type": "perf", "release": false },
+          {"type": "revert", "release": false },
+          {"type": "docs", "release": false },
+          {"type": "style", "release": false },
+          {"type": "refactor", "release": false }
+        ]
       }],
       ["@semantic-release/release-notes-generator", {
         "preset": "conventionalcommits",
