--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,11 @@
     [
       "@semantic-release/commit-analyzer",
       {
-        "preset": "angular",
+        "preset": "conventionalcommits",
+        "parserOpts": {
+          "headerPattern": "^(\w*)(?:\(([\w*.\-]+)\))?\: (.*)$",
+          "headerCorrespondence": ["type", "scope", "subject"]
+        },
         "releaseRules": [
           {
             "type": "feat",
@@ -55,7 +59,11 @@
     [
       "@semantic-release/release-notes-generator",
       {
-        "preset": "angular",
+        "preset": "conventionalcommits",
+        "parserOpts": {
+          "headerPattern": "^(\w*)(?:\(([\w*.\-]+)\))?\: (.*)$",
+          "headerCorrespondence": ["type", "scope", "subject"]
+        },
         "presetConfig": {
           "types": [
             {
