--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,7 @@
     [
       "@semantic-release/commit-analyzer",
       {
-        "preset": "conventionalcommits",
+        "preset": "angular",
         "releaseRules": [
           {
             "type": "feat",
@@ -46,7 +46,8 @@
             "scope": "s3-browser"
           },
           {
-            "release": false
+            "release": false,
+            "scope": "!s3-browser"
           }
         ]
       }
