fix(s3-browser): update scope

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -56,6 +56,9 @@
       "@semantic-release/release-notes-generator",
       {
         "preset": "conventionalcommits",
+        "writerOpts": {
+          "commitsSort": ["subject", "scope"]
+        },
         "presetConfig": {
           "types": [
             {
@@ -63,6 +66,30 @@
               "scope": "s3-browser",
               "hidden": false,
               "section": "Code Refactoring"
+            },
+            {
+              "type": "style",
+              "scope": "s3-browser",
+              "hidden": false,
+              "section": "Styling"
+            },
+            {
+              "type": "docs",
+              "scope": "s3-browser",
+              "hidden": false,
+              "section": "Documentation"
+            },
+            {
+              "type": "perf",
+              "scope": "s3-browser",
+              "hidden": false,
+              "section": "Performance Improvements"
+            },
+            {
+              "type": "revert",
+              "scope": "s3-browser",
+              "hidden": false,
+              "section": "Reverts"
             }
           ]
         }
