fix: this commit should not trigger a release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,6 @@
 
 name: RELEASE
 
-env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
 permissions:
     contents: write
 
@@ -36,5 +33,5 @@ jobs:
           node-version: 20.8.1
       - name: Release
         run: |
-            npm i -g semantic-release @semantic-release/github conventional-changelog-conventionalcommits
-            npx semantic-release
+            npm install
+            semantic-release
