--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Release
         run: |
             npm install
-            semantic-release
+            ./node_modules/.bin/semantic-release
